recursion.logo.spiral.Spiral.scala.error
Compilation error:
Spiral:2: error: 'case' expected but identifier found.
  steps match { steps=0 forward(0) ; }
                ^Spiral:2: error: '}' expected but ';' found.
  steps match { steps=0 forward(0) ; }
                                   ^Spiral:6: error: expected start of definition
	override def run() {
                 ^Spiral:10: error: eof expected but '}' found.
}
^