recursion.logo.spiral.Spiral.scala.code
def spiral(steps:Int, angle:Int, length:Int, increment:Int)    { 
  steps match { steps=0 forward(0) ; }
}